<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="fitXY"
                android:src="@drawable/poster"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_poster"
                app:layout_constraintTop_toTopOf="@id/iv_poster"
                android:text="@string/title_movie" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/divider"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toTopOf="@+id/divider"
                android:text="@string/release_date" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="@+id/divider"
                android:text="@string/duration" />

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_rating_star"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/iv_star"
                app:layout_constraintStart_toEndOf="@+id/iv_star"
                app:layout_constraintTop_toTopOf="@+id/iv_star"
                android:text="@string/rate_movie" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="@string/director"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/iv_star" />

            <TextView
                android:id="@+id/tv_director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                android:maxLines="2"
                android:text="@string/director_content"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:textSize="12sp"
                android:text="@string/genre_contents"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_director" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/iv_poster"
                app:layout_constraintStart_toStartOf="@id/iv_poster"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                android:text="@string/overview"/>

            <TextView
                android:id="@+id/tv_title_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_overview"
                app:layout_constraintStart_toStartOf="@id/iv_poster"
                android:text="@string/top_billed_cast"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_cast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_cast"
                app:layout_constraintBottom_toBottomOf="parent"/>

<!--            <HorizontalScrollView-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintTop_toBottomOf="@id/tv_title_cast"-->
<!--                app:layout_constraintStart_toStartOf="@id/iv_poster"-->
<!--                app:layout_constraintEnd_toEndOf="@id/tv_title">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="horizontal">-->

<!--                    <include-->
<!--                        layout="@layout/item_cast"/>-->
<!--                    <include-->
<!--                        layout="@layout/item_cast"/>-->
<!--                    <include-->
<!--                        layout="@layout/item_cast"/>-->

<!--                </LinearLayout>-->

<!--            </HorizontalScrollView>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>